# Finances

./: .gitignore  README.md  pyproject.toml
app/: db.py  importer.py  main.py  reconcile.py  rules.py  schema.sql
app/static/: styles.css
app/templates/: base.html  import.html  rule_edit.html  rules.html  settings.html  summary.html  transaction_detail.html  transactions.html
data/raw/: 2026-04-22T21_33_05.961Z-transactions.csv
scripts/: import_csv.py  seed_rules.py
